Restructuring the application architecture

--- a/team-selection.html
+++ b/team-selection.html
@@ -8,11 +8,11 @@
   <title>Tiger Batters Vs. ALC Pitchers</title>
 
   
-  <link rel="stylesheet" href="css/foundation.css">
+ <link rel="stylesheet" href="js/vendor/foundation/css/foundation.css">
   <link rel="stylesheet" href="css/style-stats.css">
   
 
-  <script src="js/vendor/custom.modernizr.js"></script>
+  <script src="js/vendor/foundation/js/vendor/modernizr.js"></script>
 
 </head>
 <body>
