--- a/compare.html
+++ b/compare.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="app">
   <head>
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8"/>
-  <title>Radar chart</title>
-  	<script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
-    <script src="http://d3js.org/d3.v3.min.js"></script>
+	<title>Pitchers</title>
+  	<script src="js/vendor/angular/angular.js"></script>
+    <script src="js/vendor/d3/d3.min.js"></script>
 	<script src="js/RadarChart.js"></script>
+	<script src="js/app.js"></script>
+	<script src="js/main.ctrl.js"></script>
 	<style>
 		body {
 		  margin: 0;
@@ -20,12 +22,26 @@
 			margin-left: 100px;
 			color: #ee542a;
 		}
+
+		.list-group {
+
+		}
+		.list-group li {
+			list-style-type: none;
+			margin: 0px;
+			padding: 0px;
+		}
+
 	</style>
   </head>
-  <body>
-    <div id="body"></div>
-	
-    <script type="text/javascript" src="js/compare.js"></script>
+  <body ng-controller="MainController as main">
 
+     <ul class="list-group">
+        <li class="list-group-item" ng-repeat="batterItem in batterList" ng-if="batterItem.gsx$pitcher.$t==='Phil Hughes'">
+			<radar-chart batter-data="batterItem" id="chart{{$index}}" class="chart"></radar-chart>
+        	
+		</li>
+    </ul>
+  
   </body>
 </html>
