--- a/compare.html
+++ b/compare.html
@@ -8,6 +8,7 @@
 	<script src="js/RadarChart.js"></script>
 	<script src="js/app.js"></script>
 	<script src="js/main.ctrl.js"></script>
+	<link rel="stylesheet" href="css/style-stats.css">
 	<style>
 		body {
 		  margin: 0;
@@ -18,13 +19,9 @@
 
 		.chart {
 			float:left;
-			width: 300px;
+			width: 200px;
 			margin-left: 100px;
 			color: #ee542a;
-		}
-
-		.list-group {
-
 		}
 		.list-group li {
 			list-style-type: none;
