--- a/team-selection.html
+++ b/team-selection.html
@@ -3,17 +3,21 @@
 <!--[if gt IE 8]><!--> <html class="no-js" lang="en" > <!--<![endif]-->
 
 <head>
-	<meta charset="utf-8">
-  <meta name="viewport" content="width=device-width">
-  <title>Tiger Batters Vs. ALC Pitchers</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
+    <title>Tiger Batters Vs. ALC Pitchers</title>
 
-  
- <link rel="stylesheet" href="js/vendor/foundation/css/foundation.css">
-  <link rel="stylesheet" href="css/style-stats.css">
-  
 
-  <script src="js/vendor/foundation/js/vendor/modernizr.js"></script>
+    <link rel="stylesheet" href="js/vendor/foundation/css/foundation.css">
+    <link rel="stylesheet" href="css/style-stats.css">
 
+
+    <script src="js/vendor/foundation/js/vendor/modernizr.js"></script>
+    <script src="js/vendor/angular/angular.js"></script>
+    <script src="js/vendor/d3/d3.min.js"></script>
+    <script src="js/RadarChart.js"></script>
+    <script src="js/app.js"></script>
+    <script src="js/main.ctrl.js"></script>
 </head>
 <body>
 
