--- a/batter-vs-pitcher.html
+++ b/batter-vs-pitcher.html
@@ -17,10 +17,10 @@
 	<script src="js/vendor/d3/d3.min.js"></script>
 	<script src="js/RadarChart.js"></script>
 	<script src="js/app.js"></script>
-	<script src="js/main.ctrl.js"></script>
+	<script src="js/battervpitcher.ctrl.js"></script>
 
 </head>
-<body ng-controller="MainController as main">
+<body ng-controller="BattervPitcher as main">
 
 
 	<div class="pageHead">
