--- a/batter-vs-pitcher.html
+++ b/batter-vs-pitcher.html
@@ -14,6 +14,9 @@
 
 	<script src="js/vendor/foundation/js/vendor/modernizr.js"></script>
 	<script src="js/vendor/angular/angular.js"></script>
+	<script src="js/vendor/angular-filter/dist/angular-filter.js"></script>
+	<script src="js/vendor/angular-cookies/angular-cookies.js"></script>
+	<script src="js/vendor/angular-resource/angular-resource.js"></script>
 	<script src="js/vendor/d3/d3.min.js"></script>
 	<script src="js/RadarChart.js"></script>
 	<script src="js/app.js"></script>
@@ -30,7 +33,7 @@
 		<ul>
 		<li><h1 class="tigers">Tigers Lineup</h1></li>
 		<li><div class="vs">vs</div></li>
-		<li><h1 class="twins"><b>Twins / Phil Hughes</h1><h2>R / 4.32 ERA / 214 G</h2></li>
+		<li><h1 class="twins"><b>{{ teamName }} / {{ pitcherName }}</h1><h2>R / 4.32 ERA / 214 G</h2></li>
 		</ul>
 	</div>
 
