--- a/team-selection.html
+++ b/team-selection.html
@@ -15,6 +15,8 @@
     <script src="js/vendor/foundation/js/vendor/modernizr.js"></script>
     <script src="js/vendor/angular/angular.js"></script>
     <script src="js/vendor/angular-filter/dist/angular-filter.js"></script>
+    <script src="js/vendor/angular-cookies/angular-cookies.js"></script>
+    <script src="js/vendor/angular-resource/angular-resource.js"></script>
     <script src="js/vendor/d3/d3.min.js"></script>
     <script src="js/RadarChart.js"></script>
     <script src="js/app.js"></script>
@@ -27,7 +29,7 @@
     </br>
         <ul>
             <li><h1 class="tigers">Tigers Lineup</h1></li>
-            <li><img src="img/stats/vs.png"></li>
+            <li><div class="vs">vs</div></li>
             <li><h1 class="twins"><b>ALC</h1></li>
         </ul>
     </div>
@@ -42,7 +44,7 @@
     <div class="large-6 medium-6 columns" ng-repeat="(key, value) in teamList | groupBy: 'gsx$team.$t'">
         <div class="team">
           <h1 class="sox">{{ key }}</h1>
-          <div ng-repeat="pitcher in value" class="button">{{ pitcher.gsx$pitcher.$t }}</div>
+          <a ng-click="viewPitcher( pitcher.gsx$pitcher.$t, key )" ng-repeat="pitcher in value" class="button">{{ pitcher.gsx$pitcher.$t }}</a>
         </div>
     </div>
 
