--- a/team-selection.html
+++ b/team-selection.html
@@ -7,47 +7,22 @@
     <meta name="viewport" content="width=device-width">
     <title>Tiger Batters Vs. ALC Pitchers</title>
 
-
     <link rel="stylesheet" href="js/vendor/foundation/css/foundation.css">
     <link rel="stylesheet" href="css/style-stats.css">
 
-
     <script src="js/vendor/foundation/js/vendor/modernizr.js"></script>
     <script src="js/vendor/angular/angular.js"></script>
+    <script src="js/vendor/angular-ui-router/release/angular-ui-router.js"></script>
     <script src="js/vendor/angular-filter/dist/angular-filter.js"></script>
-    <script src="js/vendor/angular-cookies/angular-cookies.js"></script>
     <script src="js/vendor/angular-resource/angular-resource.js"></script>
+    <script src="js/vendor/underscore/underscore.js"></script>
     <script src="js/vendor/d3/d3.min.js"></script>
     <script src="js/RadarChart.js"></script>
     <script src="js/app.js"></script>
     <script src="js/battervpitcher-home.ctrl.js"></script>
+    <script src="js/battervpitcher.ctrl.js"></script>
 </head>
-<body ng-controller="BattervPitcherHome as main">
-
-
-    <div class="pageHead">
-    </br>
-        <ul>
-            <li><h1 class="tigers">Tigers Lineup</h1></li>
-            <li><div class="vs">vs</div></li>
-            <li><h1 class="twins"><b>ALC</h1></li>
-        </ul>
-    </div>
-
-    <div class="pageIntro">
-            <p>Use this tool and the visualizations contained within to explore how Detroit Tigers batters have performed against American League starting pitchers. The intent of the visualizations is to show, at-a glance, how well a batter has done in the categories of getting on base (OBP), hitting for power (SLG), and overall hits per at bat (BA).</p>
-            <h2 class="tigers">Start by choosing a team and pitcher below:</h2></br>
-        </div>
-    </div>
-
-
-    <div class="large-6 medium-6 columns" ng-repeat="(key, value) in teamList | groupBy: 'gsx$team.$t'">
-        <div class="team">
-          <h1 class="sox">{{ key }}</h1>
-          <a ng-click="viewPitcher( pitcher.gsx$pitcher.$t, key )" ng-repeat="pitcher in value" class="button">{{ pitcher.gsx$pitcher.$t }}</a>
-        </div>
-    </div>
-
-        
+<body>
+    <div ui-view></div>
 </body>
-    </html>
+</html>
